--- a/src/styles/normalize.less
+++ b/src/styles/normalize.less
@@ -1,7 +1,13 @@
 
+html,
+body,
 #app {
   font-family: 'Avenir', Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: #edeef0;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  height: 100%;
 }
