--- a/src/styles/normalize.less
+++ b/src/styles/normalize.less
@@ -5,9 +5,10 @@ body,
   font-family: 'Avenir', Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: #edeef0;
+  background: #fff;
   padding: 0;
   margin: 0;
   width: 100%;
   height: 100%;
+  box-sizing: border-box;
 }
